#524: Permission review for ItemPriceType UCs